[gd_scene load_steps=16 format=3 uid="uid://br1kcgfay4e0p"]

[ext_resource type="Script" path="res://scripts/screens/title_screen.gd" id="1_i2f2q"]
[ext_resource type="Texture2D" uid="uid://c5486o7cbw0ly" path="res://assets/title_screen_sprites/hanafeuda-logo.png" id="2_g6kbb"]
[ext_resource type="Texture2D" uid="uid://dl14dxan6wuao" path="res://assets/title_screen_sprites/title-text.png" id="2_onukv"]
[ext_resource type="Texture2D" uid="uid://drbu8i0g1c06c" path="res://assets/title_screen_sprites/title-lines.png" id="4_ns4nn"]
[ext_resource type="Texture2D" uid="uid://ct2ytuv7v1kmt" path="res://assets/title_screen_sprites/quit-text.png" id="5_mfvna"]
[ext_resource type="FontFile" uid="uid://dm2rmmhs7n068" path="res://assets/fonts/slkscr.ttf" id="6_8qb6d"]
[ext_resource type="AudioStream" uid="uid://iwpb52p7tlmm" path="res://assets/audio/bgm/Title.ogg" id="7_4b543"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6gany"]
atlas = ExtResource("2_onukv")
region = Rect2(0, 0, 448, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_62bj7"]
atlas = ExtResource("2_onukv")
region = Rect2(448, 0, 448, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_5licv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6gany")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_62bj7")
}],
"loop": true,
"name": &"title_text",
"speed": 1.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_h0xjm"]
atlas = ExtResource("5_mfvna")
region = Rect2(338, 0, 334, 32)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y0i80"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_36gbu"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ipymr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ff42t"]

[node name="TitleScreen" type="Node2D"]
position = Vector2(0, -3)
script = ExtResource("1_i2f2q")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = 2
offset_top = -9.0
offset_right = 1920.0
offset_bottom = 1071.0
scale = Vector2(1.05091, 1.0113)
color = Color(0, 0, 0, 1)

[node name="Text" type="AnimatedSprite2D" parent="."]
visible = false
z_index = 2
position = Vector2(960, 767)
scale = Vector2(1.2, 1.2)
sprite_frames = SubResource("SpriteFrames_5licv")
animation = &"title_text"
autoplay = "title_text"
frame_progress = 0.62491

[node name="Lines" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(955, 766)
scale = Vector2(1.3, 1)
texture = ExtResource("4_ns4nn")

[node name="Logo" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(960, 457)
scale = Vector2(1.2, 1.2)
texture = ExtResource("2_g6kbb")

[node name="QuitText" type="Sprite2D" parent="."]
visible = false
z_index = 2
position = Vector2(960, 820)
scale = Vector2(1.2, 1.2)
texture = SubResource("AtlasTexture_h0xjm")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 821.0
offset_top = 754.0
offset_right = 1105.0
offset_bottom = 954.0
theme_override_constants/separation = 22

[node name="StartButton" type="Button" parent="VBoxContainer"]
z_index = 2
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0.886275, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.886275, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 0.839216, 0.811765, 1)
theme_override_colors/font_color = Color(0.639216, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.611765, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_8qb6d")
theme_override_font_sizes/font_size = 48
theme_override_styles/focus = SubResource("StyleBoxEmpty_y0i80")
theme_override_styles/hover = SubResource("StyleBoxFlat_36gbu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_36gbu")
theme_override_styles/normal = SubResource("StyleBoxFlat_36gbu")
text = "START"

[node name="CreditButton" type="Button" parent="VBoxContainer"]
z_index = 2
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0.886275, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.886275, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 0.839216, 0.811765, 1)
theme_override_colors/font_color = Color(0.639216, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.611765, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_8qb6d")
theme_override_font_sizes/font_size = 48
theme_override_styles/focus = SubResource("StyleBoxEmpty_ipymr")
theme_override_styles/hover = SubResource("StyleBoxFlat_36gbu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_36gbu")
theme_override_styles/normal = SubResource("StyleBoxFlat_36gbu")
text = "CREDITS"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
z_index = 2
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0.886275, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.886275, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 0.840027, 0.813055, 1)
theme_override_colors/font_color = Color(0.639216, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.611765, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_8qb6d")
theme_override_font_sizes/font_size = 48
theme_override_styles/focus = SubResource("StyleBoxEmpty_ff42t")
theme_override_styles/hover = SubResource("StyleBoxFlat_36gbu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_36gbu")
theme_override_styles/normal = SubResource("StyleBoxFlat_36gbu")
text = "QUIT"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_4b543")
autoplay = true

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
